--- a/package.json
+++ b/package.json
@@ -11,36 +11,36 @@
     "@tailwindcss/forms": "^0.3.2",
     "@tailwindcss/line-clamp": "^0.2.0",
     "@tailwindcss/typography": "^0.4.0",
-    "gatsby": "^3.3.1",
-    "gatsby-plugin-image": "^1.3.1",
-    "gatsby-plugin-manifest": "^3.3.0",
-    "gatsby-plugin-offline": "^4.3.0",
-    "gatsby-plugin-postcss": "^4.3.0",
-    "gatsby-plugin-purgecss": "^6.0.1",
-    "gatsby-plugin-react-helmet": "^4.3.0",
-    "gatsby-plugin-sharp": "^3.3.1",
-    "gatsby-source-filesystem": "^3.3.0",
-    "gatsby-source-wordpress": "^5.3.1",
-    "gatsby-transformer-remark": "^4.0.0",
-    "gatsby-transformer-sharp": "^3.3.0",
+    "gatsby": "^3.4.0",
+    "gatsby-plugin-image": "^1.4.0",
+    "gatsby-plugin-manifest": "^3.4.0",
+    "gatsby-plugin-offline": "^4.4.0",
+    "gatsby-plugin-postcss": "^4.4.0",
+    "gatsby-plugin-react-helmet": "^4.4.0",
+    "gatsby-plugin-sharp": "^3.4.0",
+    "gatsby-source-filesystem": "^3.4.0",
+    "gatsby-source-wordpress": "^5.4.0",
+    "gatsby-transformer-remark": "^4.1.0",
+    "gatsby-transformer-sharp": "^3.4.0",
     "html-react-parser": "^1.2.6",
     "lodash": "^4.17.21",
+    "pure-react-carousel": "^1.27.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
     "react-with-direction": "^1.3.1",
-    "swiper": "^6.5.7",
+    "swiper": "^6.5.8",
     "typescript": "^4.2.4",
-    "webpack": "^5.35.0"
+    "webpack": "^5.36.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.5",
     "dumper.js": "^1.3.1",
-    "postcss": "^8.2.10",
+    "postcss": "^8.2.13",
     "precss": "^4.0.0",
     "prettier": "2.2.1",
-    "tailwindcss": "^2.1.1"
+    "tailwindcss": "^2.1.2"
   },
   "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
   "keywords": [
