--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tailwindcss/line-clamp": "^0.2.0",
     "@tailwindcss/typography": "^0.4.0",
     "gatsby": "^3.4.0",
+    "gatsby-background-image": "^1.5.3",
     "gatsby-plugin-image": "^1.4.0",
     "gatsby-plugin-manifest": "^3.4.0",
     "gatsby-plugin-offline": "^4.4.0",
@@ -22,6 +23,7 @@
     "gatsby-source-wordpress": "^5.4.0",
     "gatsby-transformer-remark": "^4.1.0",
     "gatsby-transformer-sharp": "^3.4.0",
+    "gbimage-bridge": "^0.1.4",
     "html-react-parser": "^1.2.6",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
