--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/typography": "^0.4.0",
     "gatsby": "^3.4.2",
     "gatsby-background-image": "^1.5.3",
+    "gatsby-plugin-advanced-sitemap": "^1.6.0",
     "gatsby-plugin-image": "^1.4.1",
     "gatsby-plugin-manifest": "^3.4.0",
     "gatsby-plugin-offline": "^4.4.0",
