--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "react-with-direction": "^1.3.1",
     "swiper": "^6.6.2",
     "typescript": "^4.3.2",
-    "webpack": "^5.38.0"
+    "webpack": "^5.38.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
@@ -57,7 +57,7 @@
   },
   "scripts": {
     "build": "gatsby build",
-    "develop": "gatsby develop",
+    "dev": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
