--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gatsby-plugin-offline": "^4.14.0",
     "gatsby-plugin-postcss": "^4.14.0",
     "gatsby-plugin-react-helmet": "^4.14.0",
+    "gatsby-plugin-schema-snapshot": "^2.14.0",
     "gatsby-plugin-sharp": "^3.14.1",
     "gatsby-source-filesystem": "^3.14.0",
     "gatsby-source-wordpress": "^5.14.1",
@@ -43,6 +44,7 @@
   "devDependencies": {
     "autoprefixer": "^10.3.7",
     "dumper.js": "^1.3.1",
+    "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.25",
     "postcss": "^8.3.9",
     "precss": "^4.0.0",
     "prettier": "2.4.1",
