--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-plugin-mdx": "^2.14.0",
     "gatsby-plugin-offline": "^4.14.0",
     "gatsby-plugin-postcss": "^4.14.0",
+    "gatsby-plugin-preact": "^5.14.0",
     "gatsby-plugin-react-helmet": "^4.14.0",
     "gatsby-plugin-schema-snapshot": "^2.14.0",
     "gatsby-plugin-sharp": "^3.14.1",
@@ -33,6 +34,8 @@
     "gbimage-bridge": "^0.1.4",
     "html-react-parser": "^1.4.0",
     "lodash": "^4.17.21",
+    "preact": "^10.5.14",
+    "preact-render-to-string": "^5.1.19",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
