--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@tailwindcss/forms": "^0.3.4",
     "@tailwindcss/line-clamp": "^0.2.2",
     "@tailwindcss/typography": "^0.4.1",
-    "gatsby": "^3.14.2",
+    "gatsby": "^3.14.3",
     "gatsby-background-image": "^1.5.3",
     "gatsby-plugin-advanced-sitemap": "^2.0.0",
     "gatsby-plugin-image": "^1.14.1",
@@ -40,8 +40,9 @@
     "react-helmet": "^6.1.0",
     "react-with-direction": "^1.4.0",
     "swiper": "^7.0.8",
-    "typescript": "^4.4.3",
-    "webpack": "^5.58.0"
+    "typescript": "^4.4.4",
+    "use-between": "^0.0.18",
+    "webpack": "^5.58.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.3.7",
@@ -50,7 +51,7 @@
     "postcss": "^8.3.9",
     "precss": "^4.0.0",
     "prettier": "2.4.1",
-    "tailwindcss": "^2.2.16"
+    "tailwindcss": "^2.2.17"
   },
   "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
   "keywords": [
