--- a/package.json
+++ b/package.json
@@ -38,11 +38,12 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-text-mask": "^5.4.3",
     "react-with-direction": "^1.4.0",
-    "swiper": "^7.0.8",
+    "swiper": "^7.0.9",
     "typescript": "^4.4.4",
     "use-between": "^0.0.18",
-    "webpack": "^5.58.2"
+    "webpack": "^5.59.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.3.7",
