--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-recaptcha-v3": "^1.9.7",
     "react-helmet": "^6.1.0",
     "react-text-mask": "^5.4.3",
     "react-with-direction": "^1.4.0",
