--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@tailwindcss/forms": "^0.3.4",
     "@tailwindcss/line-clamp": "^0.2.2",
     "@tailwindcss/typography": "^0.4.1",
-    "gatsby": "^3.14.3",
+    "gatsby": "3.14.4",
     "gatsby-background-image": "^1.5.3",
     "gatsby-plugin-advanced-sitemap": "^2.0.0",
     "gatsby-plugin-image": "^1.14.1",
@@ -34,6 +34,7 @@
     "gbimage-bridge": "^0.1.4",
     "html-react-parser": "^1.4.0",
     "isomorphic-fetch": "^3.0.0",
+    "lmdb-store": "^1.6.11",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -41,10 +42,10 @@
     "react-helmet": "^6.1.0",
     "react-text-mask": "^5.4.3",
     "react-with-direction": "^1.4.0",
-    "swiper": "^7.0.9",
+    "swiper": "^7.1.0",
     "typescript": "^4.4.4",
     "use-between": "^0.0.18",
-    "webpack": "^5.59.0"
+    "webpack": "^5.60.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.3.7",
