--- a/package.json
+++ b/package.json
@@ -16,45 +16,39 @@
     "@tailwindcss/forms": "^0.3.4",
     "@tailwindcss/line-clamp": "^0.2.2",
     "@tailwindcss/typography": "^0.4.1",
-    "gatsby": "3.14.4",
+    "gatsby": "4.1.0",
     "gatsby-background-image": "^1.5.3",
     "gatsby-plugin-advanced-sitemap": "^2.0.0",
-    "gatsby-plugin-image": "^1.14.1",
-    "gatsby-plugin-manifest": "^3.14.0",
-    "gatsby-plugin-mdx": "^2.14.0",
-    "gatsby-plugin-offline": "^4.14.0",
-    "gatsby-plugin-postcss": "^4.14.0",
-    "gatsby-plugin-react-helmet": "^4.14.0",
-    "gatsby-plugin-schema-snapshot": "^2.14.0",
-    "gatsby-plugin-sharp": "^3.14.1",
-    "gatsby-source-filesystem": "^3.14.0",
-    "gatsby-source-wordpress": "^5.14.1",
-    "gatsby-transformer-remark": "^4.11.0",
-    "gatsby-transformer-sharp": "^3.14.0",
+    "gatsby-plugin-image": "^2.1.0",
+    "gatsby-plugin-manifest": "^4.1.0",
+    "gatsby-plugin-mdx": "^3.1.0",
+    "gatsby-plugin-offline": "^5.1.0",
+    "gatsby-plugin-postcss": "^5.1.0",
+    "gatsby-plugin-react-helmet": "^5.1.0",
+    "gatsby-plugin-schema-snapshot": "^3.1.0",
+    "gatsby-plugin-sharp": "^4.1.0",
+    "gatsby-source-filesystem": "^4.1.0",
+    "gatsby-source-wordpress": "^6.1.0",
+    "gatsby-transformer-remark": "^5.1.0",
+    "gatsby-transformer-sharp": "^4.1.0",
     "gbimage-bridge": "^0.1.4",
     "html-react-parser": "^1.4.0",
     "isomorphic-fetch": "^3.0.0",
-    "lmdb-store": "^1.6.11",
-    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-recaptcha-v3": "^1.9.7",
     "react-helmet": "^6.1.0",
     "react-text-mask": "^5.4.3",
-    "react-with-direction": "^1.4.0",
-    "swiper": "^7.1.0",
-    "typescript": "^4.4.4",
-    "use-between": "^0.0.18",
-    "webpack": "^5.60.0"
+    "swiper": "^7.2.0",
+    "use-between": "^0.1.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.3.7",
-    "dumper.js": "^1.3.1",
+    "autoprefixer": "^10.4.0",
     "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.25",
     "postcss": "^8.3.9",
     "precss": "^4.0.0",
     "prettier": "2.4.1",
-    "tailwindcss": "^2.2.17"
+    "tailwindcss": "^2.2.19"
   },
   "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
   "keywords": [
