--- a/package.json
+++ b/package.json
@@ -8,28 +8,28 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "dependencies": {
-    "@apollo/client": "^3.4.16",
-    "@headlessui/react": "^1.4.1",
+    "@apollo/client": "^3.4.17",
+    "@headlessui/react": "^1.4.2",
     "@heroicons/react": "^1.0.4",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@tailwindcss/forms": "^0.3.4",
     "@tailwindcss/line-clamp": "^0.2.2",
     "@tailwindcss/typography": "^0.4.1",
-    "gatsby": "4.1.0",
+    "gatsby": "4.1.2",
     "gatsby-background-image": "^1.5.3",
     "gatsby-plugin-advanced-sitemap": "^2.0.0",
     "gatsby-plugin-image": "^2.1.0",
-    "gatsby-plugin-manifest": "^4.1.0",
-    "gatsby-plugin-mdx": "^3.1.0",
-    "gatsby-plugin-offline": "^5.1.0",
+    "gatsby-plugin-manifest": "^4.1.1",
+    "gatsby-plugin-mdx": "^3.1.1",
+    "gatsby-plugin-offline": "^5.1.1",
     "gatsby-plugin-postcss": "^5.1.0",
     "gatsby-plugin-react-helmet": "^5.1.0",
     "gatsby-plugin-schema-snapshot": "^3.1.0",
-    "gatsby-plugin-sharp": "^4.1.0",
+    "gatsby-plugin-sharp": "^4.1.1",
     "gatsby-source-filesystem": "^4.1.0",
     "gatsby-source-wordpress": "^6.1.0",
-    "gatsby-transformer-remark": "^5.1.0",
+    "gatsby-transformer-remark": "^5.1.1",
     "gatsby-transformer-sharp": "^4.1.0",
     "gbimage-bridge": "^0.1.4",
     "html-react-parser": "^1.4.0",
@@ -50,7 +50,7 @@
     "prettier": "2.4.1",
     "tailwindcss": "^2.2.19"
   },
-  "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
+  "homepage": ".",
   "keywords": [
     "gatsby"
   ],
